--- a/shop.html
+++ b/shop.html
@@ -40,6 +40,21 @@
       <p>Check out our coupons and save upto 70%</p>
     </section>
 
+    <section id="filters" class="section-p1">
+      <div>
+        <label for="company">Company</label>
+        <select name="company" class="filter-company"></select>
+      </div>
+      <div>
+        <label for="price" class="price-label"></label>
+        <input type="range" class="filter-price" />
+      </div>
+      <div>
+        <label for="rating" class="rating-label"></label>
+        <input type="range" class="filter-rating" step="0.5" />
+      </div>
+    </section>
+
     <section id="featured-products" class="section-p1">
       <div class="product-container"></div>
     </section>
