Support for multiple categories

--- a/shop.html
+++ b/shop.html
@@ -42,6 +42,10 @@
 
     <section id="filters" class="section-p1">
       <div>
+        <label for="category">Category</label>
+        <select name="category" class="filter-category"></select>
+      </div>
+      <div>
         <label for="company">Company</label>
         <select name="company" class="filter-company"></select>
       </div>
@@ -60,11 +64,7 @@
     </section>
 
     <section id="pagination" class="section-p1">
-      <a href="#"><i class="fa-solid fa-arrow-left"></i></a>
-      <a href="#">1</a>
-      <a href="#">2</a>
-      <a href="#">3</a>
-      <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+      <button class="load-more">Load More</button>
     </section>
 
     <section id="newsletter" class="section-p1 section-m1">
