--- a/blog.html
+++ b/blog.html
@@ -18,9 +18,7 @@
   </head>
   <body>
     <section id="header">
-      <a href="#">
-        <img src="./images/logo.png" class="logo" alt="logo" />
-      </a>
+      <a href="index.html" class="logo"> E-COMMERCE </a>
 
       <div>
         <ul id="navbar">
