--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   </head>
   <body>
     <section id="header">
-      <a href="#">
-        <img src="./images/logo.png" class="logo" alt="logo" />
-      </a>
+      <a href="index.html" class="logo"> E-COMMERCE </a>
 
       <div>
         <ul id="navbar">
@@ -38,149 +36,14 @@
       <h2>Awesome deals</h2>
       <h1>On all products</h1>
       <p>Check out our coupons and save upto 70%</p>
-      <button class="main">Shop now</button>
+      <button class="main main-btn">Shop now</button>
     </section>
 
     <section id="featured-products" class="section-p1">
       <h2>Featured Products</h2>
       <p>Summer & Spring collections have arrived</p>
-      <div class="product-container">
-        <!-- <div class="product">
-          <img src="./images/products/f1.jpg" alt="product" />
-          <div class="description">
-            <span>Adidas</span>
-            <h5>Cartoon astronaut T-Shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
-
-        <div class="product">
-          <img src="./images/products/f2.jpg" alt="product" />
-          <div class="description">
-            <span>Adidas</span>
-            <h5>Cartoon astronaut T-Shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
-
-        <div class="product">
-          <img src="./images/products/f3.jpg" alt="product" />
-          <div class="description">
-            <span>Adidas</span>
-            <h5>Cartoon astronaut T-Shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
-
-        <div class="product">
-          <img src="./images/products/f4.jpg" alt="product" />
-          <div class="description">
-            <span>Adidas</span>
-            <h5>Cartoon astronaut T-Shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
-
-        <div class="product">
-          <img src="./images/products/f5.jpg" alt="product" />
-          <div class="description">
-            <span>Adidas</span>
-            <h5>Cartoon astronaut T-Shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
-
-        <div class="product">
-          <img src="./images/products/f6.jpg" alt="product" />
-          <div class="description">
-            <span>Adidas</span>
-            <h5>Cartoon astronaut T-Shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
-
-        <div class="product">
-          <img src="./images/products/f7.jpg" alt="product" />
-          <div class="description">
-            <span>Adidas</span>
-            <h5>Cartoon astronaut T-Shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div>
-
-        <div class="product">
-          <img src="./images/products/f8.jpg" alt="product" />
-          <div class="description">
-            <span>Adidas</span>
-            <h5>Cartoon astronaut T-Shirts</h5>
-            <div class="star">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-            </div>
-            <h4>$78</h4>
-          </div>
-          <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
-        </div> -->
-      </div>
+      <div class="product-container"></div>
+      <button class="main shop-btn">Shop now</button>
     </section>
 
     <section id="banner" class="section-p1">
