--- a/shop.html
+++ b/shop.html
@@ -18,9 +18,7 @@
   </head>
   <body>
     <section id="header">
-      <a href="#">
-        <img src="./images/logo.png" class="logo" alt="logo" />
-      </a>
+      <a href="index.html" class="logo"> E-COMMERCE </a>
 
       <div>
         <ul id="navbar">
@@ -61,10 +59,6 @@
 
     <section id="featured-products" class="section-p1">
       <div class="product-container"></div>
-    </section>
-
-    <section id="pagination" class="section-p1">
-      <button class="load-more">Load More</button>
     </section>
 
     <section id="newsletter" class="section-p1 section-m1">
