--- a/cart.html
+++ b/cart.html
@@ -52,18 +52,7 @@
             <td>Subtotal</td>
           </tr>
         </thead>
-        <tbody class="cart-body">
-          <!-- <tr>
-            <td>
-              <a href="#"><i class="far fa-times-circle"></i></a>
-            </td>
-            <td><img src="./images/products/f1.jpg" alt="" /></td>
-            <td>Cartoon Astranauts T-shirts</td>
-            <td>$118.19</td>
-            <td><input type="number" value="1" /></td>
-            <td>$118.19</td>
-          </tr> -->
-        </tbody>
+        <tbody class="cart-body"></tbody>
       </table>
 
       <h2 style="text-align: center" class="cart-empty">Cart is empty</h2>
