--- a/shop.html
+++ b/shop.html
@@ -70,7 +70,7 @@
         </p>
       </div>
       <div class="form">
-        <input type="text" placeholder="Your email address" />
+        <input type="email" placeholder="Your email address" />
         <button class="main">Signup</button>
       </div>
     </section>
@@ -89,6 +89,7 @@
         <p>&copy; 2022, E-commerce Application</p>
       </div>
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/shop.js"></script>
   </body>
 </html>
