--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
         </p>
       </div>
       <div class="form">
-        <input type="text" placeholder="Your email address" />
+        <input type="email" placeholder="Your email address" />
         <button class="main">Signup</button>
       </div>
     </section>
@@ -72,6 +72,7 @@
         <p>&copy; 2022, E-commerce Application</p>
       </div>
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/blog.js"></script>
   </body>
 </html>
