--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
         </p>
       </div>
       <div class="form">
-        <input type="text" placeholder="Your email address" />
+        <input type="email" placeholder="Your email address" />
         <button class="main">Signup</button>
       </div>
     </section>
@@ -117,6 +117,7 @@
         <p>&copy; 2022, E-commerce Application</p>
       </div>
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/contact.js"></script>
   </body>
 </html>
