--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </p>
       </div>
       <div class="form">
-        <input type="text" placeholder="Your email address" />
+        <input type="email" placeholder="Your email address" />
         <button class="main">Signup</button>
       </div>
     </section>
@@ -105,6 +105,7 @@
         <p>&copy; 2022, E-commerce Application</p>
       </div>
     </footer>
+    <script src="./js/common.js"></script>
     <script src="./js/home.js"></script>
   </body>
 </html>
